Custom--app/main/default/objects/Purchase_Rented__c/Purchase_Rented__c.object-meta.xml
<CustomObject>
    <description>This record will be used to facilitate lease audits on purchased rented properties.  (Is just being deployed/trained in conjunction w/ the COE/EMD process.) 8/9/13</description>
    <label>Purchased Rented Lease Audit</label>
    <nameField>
        <displayFormat>PRC-{0000}</displayFormat>
        <label>Purchase Rented Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchased Rented Lease Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>