Custom--app/main/default/objects/Purchase_Rented__c/fields/Bona_Fide_Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Bona_Fide_Lease_Status__c</fullName>
    <label>Bona Fide Lease Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bona Fide</fullName>
            </value>
            <value>
                <fullName>Non Bona Fide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>