Custom--app/main/default/objects/Purchase_Rented__c/fields/Cleaning_refundable_deposit__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_refundable_deposit__c</fullName>
    <label>Cleaning (refundable) (deposit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>