Custom--app/main/default/objects/Purchase_Rented__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>