Custom--app/main/default/objects/Purchase_Rented__c/fields/Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period__c</fullName>
    <label>Grace Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>