Custom--app/main/default/objects/Purchase_Rented__c/fields/Housing_Rent__c.field-meta.xml
<CustomField>
    <fullName>Housing_Rent__c</fullName>
    <label>Housing Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>