Custom--app/main/default/objects/Purchase_Rented__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>