Custom--app/main/default/objects/Purchase_Rented__c/fields/Lease_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Sign_Date__c</fullName>
    <label>Lease Sign Date</label>
    <type>Date</type>
</CustomField>