Custom--app/main/default/objects/Purchase_Rented__c/fields/Lease_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_To_Date__c</fullName>
    <label>Lease To Date</label>
    <type>Date</type>
</CustomField>