Custom--app/main/default/objects/Purchase_Rented__c/fields/Per_Day_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Late_Fee__c</fullName>
    <label>Per Day Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>