Custom--app/main/default/objects/Purchase_Rented__c/fields/Pet_Deposit_refundable_petdep__c.field-meta.xml
<CustomField>
    <fullName>Pet_Deposit_refundable_petdep__c</fullName>
    <label>Pet Deposit (refundable) (petdep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>