Custom--app/main/default/objects/Purchase_Rented__c/fields/Pipeline_del__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Property_Opportunity__c</referenceTo>
    <relationshipName>Purchase_Rented_Confirmations_del</relationshipName>
    <type>Lookup</type>
</CustomField>