Custom--app/main/default/objects/Purchase_Rented__c/fields/Portfolio_del__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Purchase_Rented_Confirmations_del</relationshipName>
    <type>Lookup</type>
</CustomField>