Custom--app/main/default/objects/Purchase_Rented__c/fields/Prior_Lease_Comments__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lease_Comments__c</fullName>
    <label>Prior Lease Comments</label>
    <type>TextArea</type>
</CustomField>