Custom--app/main/default/objects/Purchase_Rented__c/fields/Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Property_Code_c__c</fullName>
    <formula>Portfolio_del__r.Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property_Code__c</label>
    <type>Text</type>
</CustomField>