Custom--app/main/default/objects/Purchase_Rented__c/fields/Prorated_Rent_per_Closing_rent__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Rent_per_Closing_rent__c</fullName>
    <label>Prorated Rent per Closing (rent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>