Custom--app/main/default/objects/Purchase_Rented__c/fields/Prorated_Rent_per_THR__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Rent_per_THR__c</fullName>
    <label>Prorated Rent per THR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>