Custom--app/main/default/objects/Purchase_Rented__c/fields/QuickTrans_Completed__c.field-meta.xml
<CustomField>
    <fullName>QuickTrans_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickTrans Completed?</label>
    <type>Checkbox</type>
</CustomField>