Custom--app/main/default/objects/Purchase_Rented__c/fields/Rent_Per_Lease__c.field-meta.xml
<CustomField>
    <fullName>Rent_Per_Lease__c</fullName>
    <label>Rent Per Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>