Custom--app/main/default/objects/Purchase_Rented__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax%</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>