Custom--app/main/default/objects/Purchase_Rented__c/fields/Section_8_Lease__c.field-meta.xml
<CustomField>
    <fullName>Section_8_Lease__c</fullName>
    <label>Section 8 Lease</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Per Tenant</fullName>
            </value>
            <value>
                <fullName>Yes - Verified</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>