Custom--app/main/default/objects/Purchase_Rented__c/fields/Tenant_Rent__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Rent__c</fullName>
    <label>Tenant Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>