Custom--app/main/default/objects/Purchase_Rented__c/fields/Tenant_Tax__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Tax__c</fullName>
    <formula>Tenant_Rent__c *  Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tenant Rent * Sales Tax%</inlineHelpText>
    <label>Tenant Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>