Custom--app/main/default/objects/Purchase_Rented__c/fields/TIP_del__c.field-meta.xml
<CustomField>
    <fullName>TIP_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIP</label>
    <referenceTo>TIP_Tracking__c</referenceTo>
    <relationshipName>Purchase_Rented_Confirmations_del</relationshipName>
    <type>Lookup</type>
</CustomField>