Custom--app/main/default/objects/Purchase_Rented__c/fields/TIP_Prior_Lease_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_Prior_Lease_Accept_Date__c</fullName>
    <label>TIP Prior Lease Accept Date</label>
    <type>Date</type>
</CustomField>