Custom--app/main/default/objects/Purchase_Rented__c/fields/TIP_Prior_Lease_to_UW__c.field-meta.xml
<CustomField>
    <fullName>TIP_Prior_Lease_to_UW__c</fullName>
    <label>TIP Prior Lease to UW</label>
    <type>Date</type>
</CustomField>