Custom--app/main/default/objects/Purchase_Rented__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>