Custom--app/main/default/objects/Purchase_Rented__c/fields/X2nd_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Late_Fee__c</fullName>
    <label>2nd Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>